Clean up code after migration to Java 17